# CLionProjects

Bublesort/: CMakeLists.txt  main.cpp
Lissajous/: CMakeLists.txt  Model.cpp  Model.h  Sterowanie.cpp  Sterowanie.h  Wyswietanie.cpp  Wyswietanie.h  main.cpp
kol1/: CMakeLists.txt  Piosenka.cpp  Piosenka.h  main.cpp
kol1_alg/: CMakeLists.txt  main.cpp
kol2/: CMakeLists.txt  main.cpp
lab02_str/: CMakeLists.txt  ZLab02.cpp  ZLab02.h  main.cpp
lab03_alg/: CMakeLists.txt  main.cpp
lab03_liteversion/: CMakeLists.txt  ZLab03.cpp  ZLab03.h  main.cpp
lab03_str/: CMakeLists.txt  GeneratorLosowy.cpp  GeneratorLosowy.h  Mieszkaniec.cpp  Mieszkaniec.h  Nisza.cpp  Nisza.h  Organizm.cpp  Osobniki.cpp  Osobniki.h  Sasiedztwo.cpp  Sasiedztwo.h  Srodowisko.cpp  Srodowisko.h  Ustawienia.h  ZLab03.cpp  ZLab03.h  Zlab06.cpp  Zlab06.h  Zlab09.cpp  Zlab09.h  Zlab10.cpp  Zlab10.h  Zlab12.cpp  Zlab12.h  main.cpp
lab04_alg/: CMakeLists.txt  main.cpp
lab04_str/: CMakeLists.txt  ustawienia.cpp  ustawienia.h
lab05_alg/: CMakeLists.txt  main.cpp
lab05_str/: CMakeLists.txt  GeneratorLosowy.cpp  GeneratorLosowy.h  Sasiedztwo.h  main.cpp
lab06_lab/: CMakeLists.txt  main.cpp
lab06_str/: CMakeLists.txt  Mieszkaniec.h  Zlab03.cpp  Zlab03.h  Zlab06.cpp  Zlab06.h  main.cpp
lab07_alg/: CMakeLists.txt  main.cpp
lab07_str/: CMakeLists.txt  Mieszakniec.cpp  Mieszakniec.h  Organizm.cpp  Organizm.h  Osobniki.cpp  Osobniki.h
lab08_alg/: CMakeLists.txt  main.cpp
lab08_str/: CMakeLists.txt
lab09_alg/: CMakeLists.txt  main.cpp
lab10_std/: CMakeLists.txt
lab11/: CMakeLists.txt  (+3 more)
(+27 files in other folders)
