cmake_minimum_required(VERSION 3.17)
project(lab3_str)

set(CMAKE_CXX_STANDARD 14)

add_executable(lab3_str main.cpp ZLab03.cpp ZLab03.h Organizm.cpp Organizm.h GeneratorLosowy.cpp GeneratorLosowy.h Sasiedztwo.cpp Sasiedztwo.h Zlab06.cpp Zlab06.h Mieszkaniec.cpp Mieszkaniec.h Osobniki.cpp Osobniki.h Ustawienia.h Nisza.cpp Nisza.h Zlab09.cpp Zlab09.h Zlab10.cpp Zlab10.h Srodowisko.cpp Srodowisko.h Zlab12.cpp Zlab12.h)